[workspace]
resolver = "2"
members = [
    "interface/*",
    "rdrive-macro-utils",
    "rdrive-macros",
    "rdrive",
    "examples/enumerate",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/drivercraft/rdrive"

[workspace.dependencies]
log = "0.4"
rdrive = { path = "rdrive" }
