[workspace]
resolver = "3"
members = [
    "interface/*",
    "rdrive-macro-utils",
    "rdrive-macros",
    "rdrive",
    "examples/enumerate",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/drivercraft/rdrive"

[workspace.dependencies]
log = "0.4"
rdif-base = { version = "0.3"}
rdrive = { path = "rdrive" }
rdrive-macros = { path = "rdrive-macros" }
