[workspace]
resolver = "3"
members = [
    "interface/*",
    "rdrive-macros",
    "rdrive",
    "examples/enumerate",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/drivercraft/rdrive"

[workspace.dependencies]
log = "0.4"
rdif-base = { version = "0.3.5", features = ["alloc"] }
rdrive = { path = "rdrive" }
rdrive-macros = { path = "rdrive-macros" }
