[package]
name = "rdrive-macro-utils"
version = "0.2.1"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/ZR233/rdrive"
license = "MIT"
description = "A dyn driver manager."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[target.'cfg(not(target_os = "none"))'.dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
