[package]
name = "rdrive-macros"
version = "0.2.0"
edition.workspace = true
license = "MIT"
description = "macros for rdrive"
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
rdrive-macro-utils = { version = "0.2", path = "../rdrive-macro-utils" }
