[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A dyn driver manager."
edition.workspace = true
keywords = ["os", "driver"]
license = "MIT"
name = "rdrive"
repository.workspace = true
version = "0.13.0"

[dependencies]
enum_dispatch = "0.3"
fdt-parser = "0.4.16"
log = "0.4"
spin = "0.10"
thiserror = {version = "2", default-features = false}

rdif-base = {workspace = true}
rdif-intc = {version = "0.10", path = "../interface/rdif-intc"}
# rdif-timer = { version = "0.3" }
rdif-block = {version = "0.4", path = "../interface/rdif-block"}
rdif-clk = {version = "0.3", path = "../interface/rdif-clk"}
rdif-power = {version = "0.5", path = "../interface/rdif-power"}
rdif-serial = {version = "0.3", path = "../interface/rdif-serial"}
rdif-systick = {version = "0.4", path = "../interface/rdif-systick"}

paste = "1"
rdrive-macros = {version = "0.4", path = "../rdrive-macros"}
