[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "A dyn driver manager."
edition.workspace = true
keywords = ["os", "driver"]
license = "MIT"
name = "rdrive"
readme = "../README.md"
repository.workspace = true
version = "0.18.2"

[dependencies]
enum_dispatch = "0.3"
fdt-parser = "0.4.16"
log = "0.4"
paste = "1"
spin = "0.10"
thiserror = {version = "2", default-features = false}
pcie = "0.4"

rdif-base = {workspace = true}
rdrive-macros = {version = "0.4", path = "../rdrive-macros"}
rdif-pcie = {version = "0.1", path = "../interface/rdif-pcie"}

[dev-dependencies]
rdif-intc = { version = "0.12", path = "../interface/rdif-intc"}
rdif-serial = { version = "0.4", path = "../interface/rdif-serial"}
