[package]
name = "rdif-base"
version = "0.3.5"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
license = "MIT"
description = "Driver Interface base definition."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[features]
alloc = []

[dependencies]
thiserror = { version = "2", default-features = false }
