[package]
name = "rdif-base"
version = "0.4.1"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
license = "MIT"
description = "Driver Interface base definition."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[features]

[dependencies]
rdif-def = "0.1.1"
async-trait = "0.1"
thiserror = { version = "2", default-features = false }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
