[package]
name = "rdif-base"
version = "0.5.0"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
license = "MIT"
description = "Driver Interface base definition."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[features]

[dependencies]
rdif-def = "0.2.0"
async-trait = "0.1"
thiserror = { version = "2", default-features = false }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
