[package]
name = "rdif-intc"
version = "0.3.0"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/ZR233/rdrive"
license = "MIT"
description = "Driver Interface of interrupt controller."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { path = "../rdif-base", version = "0.2" }
