[package]
name = "rdif-intc"
version = "0.6.4"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository.workspace = true
license = "MIT"
description = "Driver Interface of interrupt controller."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { version = "0.2" }
cfg-if = "1.0"