[package]
name = "rdif-serial"
version = "0.1.2"
edition.workspace = true
repository.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
license = "MIT"
description = "Driver Interface base definition."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
spin_on = "0.1.1"
